# taprux

./: .gitignore  Cargo.toml  Makefile  README.md
sql/: 001_init.sql  002_settings.sql  100_testing_data.sql
taprux-android/: .gitignore  build.gradle.kts  settings.gradle.kts
taprux-android/app/: build.gradle.kts
taprux-android/app/src/androidTest/java/com/ghuba/taprux/: ExampleInstrumentedTest.kt
taprux-android/app/src/main/: AndroidManifest.xml
taprux-android/app/src/main/java/com/ghuba/taprux/: Core.kt  Extensions.kt  MainActivity.kt  Taprux.kt
taprux-android/app/src/main/java/com/ghuba/taprux/events/: TrackableAdded.kt
taprux-android/app/src/main/java/com/ghuba/taprux/ui/components/: TabItem.kt  TrackableGridItem.kt
taprux-android/app/src/main/res/drawable/: ic_chevron_right.xml  ic_insights.xml  ic_library.xml  ic_settings.xml  ic_track.xml  icon.xml
taprux-android/app/src/main/res/values/: themes.xml
taprux-android/app/src/test/java/com/ghuba/taprux/: ExampleUnitTest.kt
taprux-android/gradle/: libs.versions.toml
taprux-android/gradle/wrapper/: gradle-wrapper.properties
taprux-android/shared/: build.gradle.kts
taprux-android/shared/src/androidTest/java/com/ghuba/shared/: ExampleInstrumentedTest.kt
taprux-android/shared/src/main/: AndroidManifest.xml
taprux-android/shared/src/main/java/com/ghuba/shared/: Test.kt
taprux-android/shared/src/main/res/values/: strings.xml  themes.xml
taprux-android/shared/src/main/res/values-night/: themes.xml
taprux-android/shared/src/test/java/com/ghuba/shared/: ExampleUnitTest.kt
taprux-core/: Cargo.toml  uniffi.toml
taprux-core/src/: app.rs  ffi.rs  lib.rs  model.rs
taprux-core/src/app/: effect.rs  event.rs  middleware.rs  mod.rs  model.rs  state.rs  view_model.rs
taprux-core/src/database/: application_settings.rs  mod.rs  trackable.rs
taprux-core/src/logic/: application_settings.rs  events.rs  mod.rs  trackable.rs
taprux-core/src/setup/: mod.rs
(+13 files in other folders)
