[workspace]
members = [
    "taprux-core"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
serde = "1.0"
thiserror = "2.0"

# crux family
crux_core = "0.17"
facet = "=0.31"
uniffi = "=0.29.4"
uniffi_bindgen = "=0.29.4"

[workspace.lints.rust]
rust_2021_idioms = "deny"
# missing_docs = "deny"
missing_debug_implementations = "allow"
future_incompatible = "deny"
unsafe-code = "deny"

[workspace.lints.clippy]
unused_async = "deny"
