[package]
name = "taprux-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[[bin]]
name = "codegen"
required-features = ["codegen"]

[features]
default = []
facet_typegen = ["crux_core/facet_typegen"]
uniffi = ["dep:uniffi"]
wasm_bindgen = ["dep:wasm-bindgen"]
codegen = [
    "crux_core/cli",
    "dep:clap",
    "dep:log",
    "dep:pretty_env_logger",
    "uniffi",
    "facet_typegen",
]

[dependencies]
facet = { version = "=0.31", features = ["time"] }
crux_core.workspace = true
serde = { workspace = true, features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "time",
] }
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
anyhow = "*"
data-encoding = { version = "2.9" }
dirs = "6.0"
tokio = { version = "1.45", features = ["full"] }

tracing = { version = "0.1", features = [] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# optional dependencies
clap = { version = "4.6.0", optional = true, features = ["derive"] }
log = { version = "0.4.29", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }
uniffi = { version = "=0.29.4", optional = true }
wasm-bindgen = { version = "0.2.114", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2"